update wifi and eeprom and logic

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,12 +10,16 @@
 
 [env:esp32-c3-devkitm-1]
 platform = espressif32
-board = esp32-c3-devkitm-1
+board = esp32-c3-devkitm-1_16MB
 framework = arduino
 monitor_speed = 115200
 board_build.flash_mode = dio
-upload_port = /dev/cu.wchusbserial556E0037891
+upload_port = /dev/cu.wchusbserial1440
+board_build.flash_size = 16MB
+board_build.arduino.partitions = default_16MB.csv
+lib_ldf_mode = deep
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.31
 	adafruit/Adafruit AHTX0@^2.0.3
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	bblanchon/ArduinoJson@^6.21.2
