--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,14 @@ upload_port = /dev/cu.wchusbserial1440
 board_build.flash_size = 16MB
 board_build.arduino.partitions = default_16MB.csv
 lib_ldf_mode = deep
+; build_flags = -DLV_LVGL_H_INCLUDE_SIMPLE
+; 			-I./lib/aht21 
+; 			-I./lib/at24cx 
+; 			-I./lib/http_request 
+; 			-I./lib/lvgl 
+; 			-I./lib/weather 
+; 			-I./lib/util 
+
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.31
 	adafruit/Adafruit AHTX0@^2.0.3
